--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,34 @@ red - #ee5253
 
 */
 
+body {
+    background-image: url("/assets/burger-friends.jpg");
+    background-size: cover;
+}
+
+.header {
+    width: 100%;
+    background-color: #0fb9b1;
+}
+
+.main-section {
+    width: 100%;
+    height: 50%;
+    border: solid;
+}
+.left-section {
+    background-color: grey;
+    width: 30%;
+    height: 500px;
+    border: solid;
+    float: left;
+}
+
+.right-section {
+    background-color: grey;
+    width: 30%;
+    height: 500px;
+    border: solid;
+    float: right;
+}
+
