--- a/styles.css
+++ b/styles.css
@@ -8,25 +8,33 @@ red - #ee5253
 
 */
 
+
+header {
+    background-color: #0fb9b1;
+    height: 50px;
+}
+
 body {
     background-image: url("/assets/burger-friends.jpg");
     background-size: cover;
-}
+    margin: 0px;
+    border: solid cyan 10px;
 
-.header {
-    width: 100%;
-    background-color: #0fb9b1;
 }
 
 .main-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     width: 100%;
-    height: 50%;
-    border: solid;
+    height: 100%;
+    border: solid red 10px;
+    top: 300;
 }
 .left-section {
     background-color: grey;
     width: 30%;
-    height: 500px;
+    height: 400px;
     border: solid;
     float: left;
 }
@@ -34,7 +42,7 @@ body {
 .right-section {
     background-color: grey;
     width: 30%;
-    height: 500px;
+    height: 400px;
     border: solid;
     float: right;
 }
