--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,14 @@ red - #ee5253
 */
 
 
+.hidden {
+    display: none!important;
+  }
+
+.flex {
+    display: flex;
+}
+
 header {
     background-color: #0fb9b1;
     height: 50px;
@@ -17,23 +25,36 @@ header {
 body {
     background-image: url("/assets/burger-friends.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     margin: 0px;
     border: solid cyan 10px;
+    height: 100vh;
+}
+.login-view-left-section {
+    display: hidden;
+}
+.main-page-view {
+    
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+}
 
+.login-view-left-section {
+    background-color: grey;
+    width: 30%;
+    height: 400px;
+    border: solid red 10px;
+    float: left;
 }
 
 .main-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    border: solid red 10px;
-    top: 300;
+    margin-top: 100px;
 }
 .left-section {
     background-color: grey;
-    width: 30%;
+    opacity: 0.75;
+    width: 300px;
     height: 400px;
     border: solid;
     float: left;
@@ -41,7 +62,8 @@ body {
 
 .right-section {
     background-color: grey;
-    width: 30%;
+    opacity: 0.75;
+    width: 300px;
     height: 400px;
     border: solid;
     float: right;
